--- a/src/blog/templates/blog/author_index_page.html
+++ b/src/blog/templates/blog/author_index_page.html
@@ -19,10 +19,9 @@
                 
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-4">
                     {% for author in authors %}
-                        <a href="{% pageurl author.author_page %}" class="bg-yellow-500 rounded-xl overflow-hidden drop-shadow group hover:rotate-1 transition-transform">
-                            <div class="p-4">
+                        <a href="{% pageurl author.author_page %}" class="bg-yellow-500 rounded-xl overflow-hidden drop-shadow group hover:rotate-1 transition-transform aspect-square flex flex-col justify-end bg-cover" style="background-image: url({% get_user_avatar_url author %})">
+                            <div class="p-4 pt-16 bg-gradient-to-t to-transparent from-yellow-500 flex flex-col justify-end">
                                 <h3 class="text-xl font-semibold text-black group-hover:underline">{% user_display_name author %}</h3>
-                                {% user_avatar author %}
                             </div>
                         </a>
                     {% empty %}
