--- a/src/brazil_blog/static/css/brazil_blog_compiled.css
+++ b/src/brazil_blog/static/css/brazil_blog_compiled.css
@@ -1411,18 +1411,6 @@ select {
   top: -0.5rem;
 }
 
-.bottom-0 {
-  bottom: 0px;
-}
-
-.left-0 {
-  left: 0px;
-}
-
-.right-0 {
-  right: 0px;
-}
-
 .right-2 {
   right: 0.5rem;
 }
@@ -1451,6 +1439,14 @@ select {
   z-index: 10;
 }
 
+.float-start {
+  float: inline-start;
+}
+
+.clear-both {
+  clear: both;
+}
+
 .m-1 {
   margin: 0.25rem;
 }
@@ -1458,6 +1454,11 @@ select {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .mb-0 {
@@ -1476,12 +1477,12 @@ select {
   margin-left: 0.5rem;
 }
 
-.ml-auto {
-  margin-left: auto;
+.ml-4 {
+  margin-left: 1rem;
 }
 
-.mr-4 {
-  margin-right: 1rem;
+.ml-auto {
+  margin-left: auto;
 }
 
 .mt-0 {
@@ -1576,10 +1577,6 @@ select {
   height: 4rem;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
 .h-8 {
   height: 2rem;
 }
@@ -1602,10 +1599,6 @@ select {
 
 .w-16 {
   width: 4rem;
-}
-
-.w-24 {
-  width: 6rem;
 }
 
 .w-48 {
@@ -1814,6 +1807,10 @@ select {
   --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 
+.bg-cover {
+  background-size: cover;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1875,6 +1872,10 @@ select {
 
 .pl-4 {
   padding-left: 1rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
 }
 
 .pt-2 {
