--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -31,7 +31,9 @@
                     </div>
                 </div>
             </div>
-            {{ page.body|richtext }}
+            <div class="p-4">
+                {{ page.body|richtext }}
+            </div>
             <div class="p-4 grid md:grid-cols-2 lg:grid-cols-3 gap-4">
                 {% for item in page.gallery_images.all %}
                     <div class="bg-white rounded-xl overflow-hidden drop-shadow group hover:rotate-3 transition-transform">
