Update author display logic and add Python files to Tailwind CSS config (#30)
* feat: Update author display logic in blog templates

Refactor the author display logic in the `blog_page.html` and `blog_index_page.html` templates to handle different scenarios. The code now checks for the presence of `page.author` and `page.owner` to display the correct author information. This change ensures consistent and accurate author attribution on the blog pages.

* refactor: Update `AuthorPage` parent page types

Update the `AuthorPage` class in `models.py` to specify the parent page types as `['AuthorIndexPage']`. This change ensures that more than one author page can be created under the author index page, maintaining the desired page structure.

* feat: Update `AuthorIndexPage` to fetch all users who have authored at least one blog post

This change modifies the `get_context` method in the `AuthorIndexPage` class to fetch all users who have authored at least one blog post. The previous implementation used a specific group (`Editors`) to filter the authors, but this change removes the dependency on the group and directly queries the `User` model. This ensures that all authors are included in the context, regardless of their group membership.

* feat: Update author display logic in blog templates

* feat: Update `tailwind.config.js` to include Python files in content

Update the `tailwind.config.js` file to include Python files (`*.py`) in the `content` array. This change ensures that the Tailwind CSS utility classes are applied to HTML, JavaScript, and Python files in the project, improving consistency and styling across all file types.

* fix(test): Fix tests after adding author to BlogPage

* feat: Add restart option to docker-compose.yml

This commit adds the `restart: always` option to the `docker-compose.yml` file. This ensures that the service will automatically restart if it crashes or if the Docker daemon restarts.

* feat: Update author displa

--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -1,65 +1,43 @@
 {% extends "base.html" %}
-
-{% load i18n static wagtailcore_tags wagtailimages_tags custom_image_tags %}
-
+{% load i18n static wagtailcore_tags wagtailimages_tags custom_image_tags user_tags %}
 {% block body_class %}template-blogindexpage{% endblock %}
-
 {% block content %}
 
 <div class="bg-green-700 py-8 flex-grow">
-
     <div class="max-w-3xl md:max-w-5xl mx-auto p-4 grid md:grid-cols-2 lg:grid-cols-3 gap-4">
-
         {% for post in blogpages %}
             <a href="{% pageurl post %}" class="bg-white rounded-xl overflow-hidden drop-shadow group hover:rotate-3 transition-transform">
                 <div class="relative aspect-square">
                     {% if post.specific.image %}
-                        <img 
-                            src="{{ post.specific.image|advanced_image:'fill-64x64,format-jpeg,bgcolor-eab308' }}"
-                            data-src="{{ post.specific.image|advanced_image:'fill-512x512,quality-90' }}"
-                            class="lazyload blur w-full h-full object-cover object-center transition bg-yellow-500 scale-105 duration-150"
-                            alt="{{ post.specific.image.alt }}"
-                        />
+                        <img src="{{ post.specific.image|advanced_image:'fill-64x64,format-jpeg,bgcolor-eab308' }}"
+                             class="lazyload blur w-full h-full object-cover object-center transition bg-yellow-500 scale-105 duration-150"
+                             data-src="{{ post.specific.image|advanced_image:'fill-512x512,quality-90' }}"
+                             alt="{{ post.specific.image.alt }}">
                     {% else %}
                         <div class="h-80 bg-gray-300"></div>
                     {% endif %}
                     <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
-                        <h2 class="bold text-4xl mb-0 text-black group-hover:underline hover:underline decoration-wavy">
-                            {{ post.title }}
-                        </h2>
+                        <h2 class="bold text-4xl mb-0 text-black group-hover:underline hover:underline decoration-wavy">{{ post.title }}</h2>
                         <div class="flex justify-between gap-4">
                             <div class="flex flex-col flex-wrap">
-                                <p class="text-sm">{{ post.specific.date | date:"d-m-Y H:i" }}</p>
-                                <p class="text-sm">
-                                    {% if post.specific.intro %}
-                                        {{ post.specific.intro }}
-                                    {% else %}
-                                        {{ post.specific.body|richtext|slice:":500" }}
-                                    {% endif %}
-                                </p>
+                                {{ post.specific.date | date:"d-m-Y H:i" }}
+                                {% if post.specific.intro %}
+                                    {{ post.specific.intro }}
+                                {% else %}
+                                    {{ post.specific.body|richtext|slice:":500" }}
+                                {% endif %}
                             </div>
                             <div class="flex flex-col justify-end items-center">
-                                {% if post.owner.wagtail_userprofile.avatar %}
-                                    <img src="{{ post.owner.wagtail_userprofile.avatar.url }}" alt="{{ request.user.get_full_name }}" class="rounded-full" style="width: 30px; height: 30px">
-                                {% endif %}
-                                {% if post.owner.first_name and page.owner.last_name %}
-                                    <p class="text-sm"> {{post.owner.first_name}} </p>
-                                {% else %}   
-                                    <p class="text-sm"> {{post.owner}} </p>
-                                {% endif %}
-     
+                                {% post_user_avatar post 'w-8 h-8 rounded-full object-cover' %}
+                                <p class="text-sm">{% post_user_display_name post %}</p>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </a>
         {% endfor %}
     </div>
-
     {% include "blog/includes/tukanchamon.html" %}
-
 </div>
 
 {% endblock %}
