--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -17,19 +17,18 @@
                         <div class="h-80 bg-gray-300"></div>
                     {% endif %}
                     <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
-                        <h2 class="bold text-4xl mb-0 text-black group-hover:underline hover:underline decoration-wavy">{{ post.title }}</h2>
-                        <div class="flex justify-between gap-4">
-                            <div class="flex flex-col flex-wrap">
+                        <h2 class="bold text-4xl mb-2 text-black group-hover:underline hover:underline decoration-wavy">{{ post.title }}</h2>
+                        <div class="flex flex-col justify-between gap-2 text-sm">
+                            <div class="flex flex-row items-center flex-wrap gap-2">
+                                {% post_user_avatar post 'w-8 h-8 rounded-full object-cover' %}
                                 {{ post.specific.date | date:"d-m-Y H:i" }}
+                            </div>
+                            <div>
                                 {% if post.specific.intro %}
                                     {{ post.specific.intro }}
                                 {% else %}
                                     {{ post.specific.body|richtext|slice:":500" }}
                                 {% endif %}
-                            </div>
-                            <div class="flex flex-col justify-end items-center">
-                                {% post_user_avatar post 'w-8 h-8 rounded-full object-cover' %}
-                                <p class="text-sm">{% post_user_display_name post %}</p>
                             </div>
                         </div>
                     </div>
