--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -16,10 +16,17 @@
                     <h1 class="bold text-4xl mb-0 text-black">{{ page.title }}</h1>
                     <div class="flex items-center justify-between gap-4">
                         {{ page.specific.date | date:"d-m-Y H:i" }}
-                        <div class="flex flex-row items-center gap-4">
-                            <p class="text-sm">{% post_user_display_name page %}</p>
-                            {% post_user_avatar page %}
-                        </div>
+                        {% if page.author.author_page %}
+                            <a href="{{ page.author.author_page.url }}" class="flex flex-row items-center gap-4 hover:underline">
+                                <p class="text-sm italic">{% post_user_display_name page %}</p>
+                                {% post_user_avatar page %}
+                            </a>
+                        {% else %}
+                            <div class="flex flex-row items-center gap-4">
+                                <p class="text-sm italic">{% post_user_display_name page %}</p>
+                                {% post_user_avatar page %}
+                            </div>
+                        {% endif %}
                     </div>
                     <div class="flex ml-auto items-center gap-4">
                         {{ page.hero_text }}
