--- a/src/blog/templates/blog/includes/filter-bar.html
+++ b/src/blog/templates/blog/includes/filter-bar.html
@@ -4,7 +4,7 @@
 
     <div class="transition p-4 rounded-lg relative min-h-16">
     
-        <form method="get" action="" class="flex flex-row gap-2 items-end">
+        <form id="filterForm" method="get" action="" class="flex flex-row gap-2 items-end">
             <div>
                 <h3 class="sr-only">Filter by Author</h3>
                 <label for="author" class="block text-sm font-medium text-white mb-1">Author:</label>
@@ -65,6 +65,7 @@
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         
+        const form = document.getElementById('filterForm');
         const submitButton = document.getElementById('submitButton');
 
         // if the form values change, enable the submit button
@@ -73,6 +74,30 @@
                 submitButton.disabled = false;
                 submitButton.classList.remove('cursor-not-allowed', 'opacity-50');
                 submitButton.classList.add('hover:bg-blue-600');
+            });
+        });
+
+        const authorButtons = document.querySelectorAll('button[name="author"]');
+
+        authorButtons.forEach(button => {
+            button.addEventListener('click', function(event) {
+                event.preventDefault();
+                
+                // check if active by getting author url param
+                const isActive = new URLSearchParams(window.location.search).get('author') === button.value;
+
+                // if active, remove the author param
+                if (isActive) {
+                    const url = new URL(window.location.href);
+                    url.searchParams.delete('author');
+                    window.location.href = url;
+                } else {
+                    // if not active, add the author param
+                    const url = new URL(window.location.href);
+                    url.searchParams.set('author', button.value);
+                    window.location.href = url;
+                }
+                
             });
         });
     });
