style: Update filter bar button layout and spacing

--- a/src/blog/templates/blog/includes/filter-bar.html
+++ b/src/blog/templates/blog/includes/filter-bar.html
@@ -45,7 +45,7 @@
                 <input type="query" id="query" name="query" placecholder="Search query" value="{{ request.GET.query }}" class="mt-1 block w-full h-10 rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
             </div>
 
-            <div class="flex self-end ml-auto items-center gap-2 mt-5 lg:mt-0">
+            <div class="flex justify-center lg:self-end lg:ml-auto items-center gap-5 lg:gap-2 mt-5 lg:mt-0">
                 <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded transition opacity-50 cursor-not-allowed" id="submitButton" disabled="false">
                     Search
                     <span>&rarr;</span>
