style: Update filter bar button color and hover effect

--- a/src/blog/templates/blog/includes/filter-bar.html
+++ b/src/blog/templates/blog/includes/filter-bar.html
@@ -50,7 +50,7 @@
                     Search
                     <span>&rarr;</span>
                 </button>
-                <a href="{% pageurl page %}" class="bg-gray-300 text-gray-700 px-4 py-2 rounded transition {% if not active_filters %} opacity-50 cursor-not-allowed {% else %} hover:bg-gray-400 {% endif %}" id="resetButton">
+                <a href="{% pageurl page %}" class="bg-slate-300 text-gray-700 px-4 py-2 rounded transition {% if not active_filters %} opacity-50 cursor-not-allowed {% else %} hover:bg-slate-200 {% endif %}" id="resetButton">
                     Reset
                     <span>&times;</span>
                 </a>
