--- a/src/blog/templates/blog/includes/filter-bar.html
+++ b/src/blog/templates/blog/includes/filter-bar.html
@@ -4,7 +4,7 @@
 
     <div class="transition p-4 rounded-lg relative min-h-16">
     
-        <form id="filterForm" method="get" action="" class="flex flex-col lg:flex-row gap-2 lg:items-end">
+        <form id="filterForm" method="get" action="" class="flex flex-col flex-wrap sm:flex-row gap-2 md:items-end">
             <div>
                 <h3 class="sr-only">Filter by Author</h3>
                 <label for="author" class="block text-sm font-medium text-white mb-1">Author:</label>
@@ -39,13 +39,13 @@
                 </div>
             </div>
 
-            <div>
+            <div class="max-w-xs">
                 <h3 class="sr-only">Search term</h3>
                 <label for="query" class="block text-sm font-medium text-white mb-1">Search:</label>
                 <input type="query" id="query" name="query" placecholder="Search query" value="{{ request.GET.query }}" class="mt-1 block w-full h-10 rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
             </div>
 
-            <div class="flex justify-center lg:self-end lg:ml-auto items-center gap-5 lg:gap-2 mt-5 lg:mt-0">
+            <div class="flex justify-center md:self-end md:ml-auto items-center gap-10 md:gap-2 mt-5 md:mt-0 w-full md:w-auto">
                 <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded transition opacity-50 cursor-not-allowed" id="submitButton" disabled="false">
                     Search
                     <span>&rarr;</span>
