--- a/src/brazil_blog/templates/includes/header.html
+++ b/src/brazil_blog/templates/includes/header.html
@@ -19,7 +19,7 @@
             {% for menuitem in site_root.get_children.live.in_menu %}
             <li>
                 <a href="{% pageurl menuitem %}" class="text-white hover:text-blue-800 transition-colors">
-                    {{ menuitem.title }}
+                    <span class="text-sm md:text-base"> {{ menuitem.title }} </span>
                 </a>
             </li>
             {% endfor %}
