use video url in iframe #26

--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -31,10 +31,21 @@
                     </div>
                 </div>
             </div>
-            <div class="p-4">
-                {{ page.body|richtext }}
-                {{ page.video }}
+            <div class="p-4 flex-grow">
+                <div class="mb-4"> {{ page.body|richtext }} </div>
+                <div class="bg-slate-300 aspect-video">
+                    <iframe 
+                        src="{{page.video}}" 
+                        title="Video player"
+                        class="h-full w-full"
+                        frameBorder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowFullScreen
+                        loading="lazy"
+                    ></iframe>
+                </div>
             </div>
+
             <div class="p-4 grid md:grid-cols-2 lg:grid-cols-3 gap-4">
                 {% for item in page.gallery_images.all %}
                     <div class="bg-white rounded-xl overflow-hidden drop-shadow group hover:rotate-3 transition-transform">
