--- a/src/blog/templates/blog/includes/filter-bar.html
+++ b/src/blog/templates/blog/includes/filter-bar.html
@@ -45,7 +45,7 @@
                 <input type="query" id="query" name="query" placecholder="Search query" value="{{ request.GET.query }}" class="mt-1 block w-full h-10 rounded-md border-gray-300 shadow-sm focus:border-indigo-300 focus:ring focus:ring-indigo-200 focus:ring-opacity-50">
             </div>
 
-            <div class="flex justify-center md:self-end md:ml-auto items-center gap-10 md:gap-2 mt-5 md:mt-0 w-full md:w-auto">
+            <div class="flex justify-end self-end ml-auto items-center gap-4 md:gap-2 mt-4 md:mt-0 w-full md:w-auto">
                 <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded transition opacity-50 cursor-not-allowed" id="submitButton" disabled="false">
                     Search
                     <span>&rarr;</span>
