Feature/37 mobile screen header (#38)
* hide side name on small screens #37

* make nav buttons smaller on mobile screens #37

---------

Co-authored-by: Naomi Eliasar <naomi@omnimap.nl>

--- a/src/brazil_blog/static/css/brazil_blog_compiled.css
+++ b/src/brazil_blog/static/css/brazil_blog_compiled.css
@@ -2302,6 +2302,10 @@ select {
     width: auto;
   }
 
+  .md\:inline-block {
+    display: inline-block;
+  }
+
   .md\:max-w-5xl {
     max-width: 64rem;
   }
@@ -2316,6 +2320,11 @@ select {
 
   .md\:items-end {
     align-items: flex-end;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .md\:gap-2 {
